fmm/src/analysis/snapshots/fmm__analysis__cps__tests__if___transform_call_after_preserved_if.snap
---
source: fmm/src/analysis/cps.rs
expression: "format::format_module(&transform_module(Module::new(vec![],\n                vec![FunctionDeclaration :: new(\"f\", function_type.clone())],\n                vec![],\n                vec![create_function_definition(\"g\", vec! [], types ::\n                    Primitive :: Float64, Block ::\n                    new(vec!\n                    [If ::\n                    new(types :: Primitive :: Float64, Primitive ::\n                    Boolean(true), Block ::\n                    new(vec!\n                    [Load ::\n                    new(types :: Primitive :: Float64, Undefined ::\n                    new(types :: Pointer :: new(types :: Primitive :: Float64)),\n                    \"x\").into()], Branch ::\n                    new(types :: Primitive :: Float64, Variable :: new(\"x\")),),\n                    Block :: new(vec! [], TerminalInstruction :: Unreachable),\n                    \"y\",).into(), Call ::\n                    new(function_type, Variable :: new(\"f\"), vec!\n                    [Variable :: new(\"y\").into()], \"z\",).into()], Return ::\n                    new(types :: Primitive :: Float64, Variable ::\n                    new(\"z\")),),)])))"
---
(module
  (function g _s _k
    (block
      (if true
        (block
          (load undefined x)
          (branch x))
        (block
          (unreachable))
        y)
      (call f _s _k y _k_0)
      (return _k_0)))
  (function _fmm_stack_extend s e
    (block
      (load (record-address s 1) x0)
      (call _fmm_stack_align_size e (align-of pointer-integer) x1)
      (load (record-address s 2) x2)
      (if (> (+ x0 x1) x2)
        (block
          (load (record-address s 0) x3)
          (reallocate-heap x3 (* x2 2) x4)
          (store x4 (record-address s 0))
          (store (* x2 2) (record-address s 2))
          (branch (record)))
        (block
          (branch (record)))
        x5)
      (return (record))))
  (function _fmm_stack_align_size size alignment
    (block
      (if (== size 0)
        (block
          (branch 0))
        (block
          (branch (* (+ (/ (- size 1) alignment) 1) alignment)))
        x0)
      (return x0))))
